--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "docs/sphinx_rtd_theme"]
 	path = docs/sphinx_rtd_theme
 	url = https://github.com/rtfd/sphinx_rtd_theme.git
+[submodule "merchant-interface"]
+	path = merchant-interface
+	url = git@git.netzkollektiv.com:netzkollektiv-projects/easycredit-merchant.git
