--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,27 @@
 {
+    "name": "ratenkaufbyeasycredit/magento1",
+    "type": "magento-module",
+    "license": "MIT",
+    "description": "ratenkauf by easyCredit Magento Extension",
+    "keywords": ["ratenkauf", "Magento"],
+    "homepage": "https://www.easycredit-ratenkauf.de/",
+    "authors": [
+        {
+            "name": "NETZKOLLEKTIV GmbH",
+            "email": "kontakt@netzkollektiv.com"
+        }
+    ],
+    "support": {
+          "email": "partnerservice.ratenkauf@teambank.de"
+	},
     "require": {
-        "ratenkaufbyeasycredit/php-sdk": "^1.4"
+        "magento-hackathon/magento-composer-installer": "*",
+        "ratenkaufbyeasycredit/php-sdk": "^1.6"
+    },
+    "config": {
+      "vendor-dir": "src/app/code/community/Netzkollektiv/EasyCredit/vendor"
+    },
+    "extra":{
+        "magento-root-dir": "src/"
     }
 }
