--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "devDependencies": {},
   "scripts": {
-    "release": "./bin/release",
-    "docs:html" : "sudo docker run --rm -v ${PWD}/docs:/docs -v /opt/sphinx_rtd_theme/sphinx_rtd_theme:/docs/source/_themes/sphinx_rtd_theme sphinxdoc/sphinx make html",
-    "docs:pdf" : "sudo docker run --rm -v ${PWD}/docs:/docs -v /opt/sphinx_rtd_theme/sphinx_rtd_theme:/docs/source/_themes/sphinx_rtd_theme sphinxdoc/sphinx-latexpdf make latexpdf",
-    "deploy:docs" : "rsync -rvz --delete ${PWD}/docs/build/html/ nk:html/corporate-2019/web/docs/ratenkaufbyeasycredit-magento1/"
+    "docs:build:html" : "sudo docker run --rm -v ${PWD}/docs:/docs -v /opt/sphinx_rtd_theme/sphinx_rtd_theme:/docs/source/_themes/sphinx_rtd_theme sphinxdoc/sphinx make html",
+    "docs:build:pdf" : "sudo docker run --rm -v ${PWD}/docs:/docs -v /opt/sphinx_rtd_theme/sphinx_rtd_theme:/docs/source/_themes/sphinx_rtd_theme sphinxdoc/sphinx-latexpdf make latexpdf",
+    "docs:deploy" : "rsync -rvz --delete ${PWD}/docs/build/html/ nk:html/corporate-2019/web/docs/ratenkaufbyeasycredit-magento1/",
+    "docs": "yarn docs:build:html; yarn docs:deploy",
+    "release": "./bin/release"
   },
   "repository": {
     "type": "git",
