--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,15 @@
           "email": "partnerservice.ratenkauf@teambank.de"
 	},
     "require": {
-        "ratenkaufbyeasycredit/php-sdk": "^1.6"
+        "netzkollektiv/ratenkaufbyeasycredit-api-v3-php": "1.3.4"
     },
     "config": {
       "vendor-dir": "src/app/code/community/Netzkollektiv/EasyCredit/vendor"
     },
     "extra":{
         "magento-root-dir": "src/"
+    },
+    "require-dev": {
+        "macopedia/phpstan-magento1": "^1.0"
     }
 }
